examples/bad/CheckoutTrust.tsx
export function Checkout() {
  return (
    <section>
      <h1>Checkout</h1>
      <button>Pay now</button>
    </section>
  );
}
